--- a/AboutMe/css/header.css
+++ b/AboutMe/css/header.css
@@ -4,9 +4,9 @@
 * {box-sizing: border-box;}
 
 body {
-   margin: 0;
+   margin: 0 auto;
    color: #222;
-   line-height: 1.5em;
+   line-height: 2em;
    font-size: 20px;
    background-color: white;
    font-weight: 300;
@@ -24,7 +24,7 @@ header {
 nav {
    /* border: 1px solid red; */
    width: 800px;
-   margin: auto;
+   margin: 0 auto;
 }
 nav > div {
    /* border: 1px solid #000; */
@@ -49,9 +49,11 @@ nav > div {
    width: 10px;
    text-align: center;
 }
+
 .lnb a {
-   background-color: #ffcc33;
-   color: #fff;
+   background-color: white;
+   color: #ff8868;
    padding: 5px 15px;
-   border-radius: 30px;
-} 
+   margin: 10px;
+   border-radius: 10px;
+}
