--- a/Chrome/css/style.css
+++ b/Chrome/css/style.css
@@ -1,1 +1,24 @@
 .hidden{ display: none;}
+*{margin: 0 auto; position: relative;}
+#clock{
+    font-size: 80px;
+    /* position: absolute; top: 50%; left: 50%; */
+}
+input{
+    width: 300px; height: 40px;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    /* position: absolute; top: 60%; left: 50%; */
+}
+button{
+    width: 20px; height: 20px;
+    border: 1px solid white;
+    background-color: white;
+    border-radius: 10px;
+    line-height: 7px;
+    font-size: 15px;
+    margin: 0px 10px;
+}
+#quote{
+    /* position: absolute; top: 80%; left: 50%; */
+}
