--- a/kokoaclone/css/style.css
+++ b/kokoaclone/css/style.css
@@ -1,12 +1,43 @@
-body{
-    background-color: tomato;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+@import "./reset.css";
+@import "./status-bar.css";
+@import "./variables.css";
+body {
+  font-family: "Open Sans", sans-serif;
 }
-.status-bar{
-    /* 화면에 같은 줄에 나란히 정렬 */
-    display: flex; 
-    /* flex의 축을 따라 같은 간격으로 나란히 떨어뜨리기  */
-    justify-content: space-between;
+.welcome-header{
+    margin: 90px 0px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} 
+.welcome-header__title{
+    margin-bottom: 20px;
+    font-size: 25px;
 }
-.stutus-bar_column:first-child span{
-    margin-right: 5px;
+.welcome-header__text{
+    width: 60%;
+    opacity: 0.7;
+}
+
+#login-form{
+    display: flex;
+    flex-direction: column;
+    margin: 0px 30px;
+}
+
+#login-form input{
+    border: none;
+    font-size: 18px;
+    padding: 15px 0px;
+    border-bottom: 2px solid rgba(0,0,0,0.2);
+    margin-bottom: 25px;
+}
+
+#login-form input::placeholder{
+    color: rgba(0,0,0,0.4);
+}
+#login-form input:focus{
+    border-color: rgba(0,0,0,0.4);
 }
