--- a/kokoaclone/css/style.css
+++ b/kokoaclone/css/style.css
@@ -6,6 +6,7 @@
 @import "./component/nav-bar.css";
 @import "./component/screen-header.css";
 @import "./component/user-component.css";
+@import "./component/badge.css";
 /* screens */
 @import "./screens/login.css";
 @import "./screens/friends.css";
@@ -13,4 +14,7 @@
 body {
     color: #2e363e;
   font-family: "Open Sans", sans-serif;
+}
+.main-screen{
+  padding: 0px var(--horizontal-space);
 }
