--- a/kokoaclone/css/variables.css
+++ b/kokoaclone/css/variables.css
@@ -1,4 +1,7 @@
- :root {
+/* 같은 코드가 반복되는건 변수로 만들어서 편하게 적용하기 */
+
+:root {
     --yellow: #fae100;
     --horizontal-space: 25px;
+    --main-border: 1px solid rgba(0,0,0,0.2);
  }
