--- a/kokoaclone/css/component/nav-bar.css
+++ b/kokoaclone/css/component/nav-bar.css
@@ -15,12 +15,6 @@
     color: inherit;
     position: relative;
 }
-.nav_notification{
-    position: absolute;
-    left: 15px; bottom: 15px;
-}
-   
-
 .nav_option{
     background-color: tomato;
     width: 6px;
@@ -31,4 +25,48 @@
     align-items: center;
     position: absolute;
     left: 35px; bottom: 30px;
+}
+
+/* 메세지 1 빙글빙글 */
+@keyframes notificationAnimation{
+    0%{
+        transform: none;
+    }
+    50%{
+        transform: translateY(-8px) rotateY(180deg);
+    }
+    100%{
+        transform: none;
+    }
+}
+.nav__notification{
+    position: absolute;
+    left: 15px; bottom: 15px;
+    animation: notificationAnimation 2s ease-in-out infinite;
+}
+   
+/* nav-bar 순서대로 나오기 */
+@keyframes appearBtnAnimation{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.nav__btn{
+    transform: translateY(50px);
+    opacity: 0;
+    animation: appearBtnAnimation 0.3s ease-in-out forwards;
+}
+.nav__btn:nth-child(2){
+    animation-delay: 0.3s;
+}
+.nav__btn:nth-child(3){
+    animation-delay: 0.6s;
+}
+.nav__btn:last-child{
+    animation-delay: 0.9s;
 }
