--- a/kokoaclone/css/screens/find.css
+++ b/kokoaclone/css/screens/find.css
@@ -100,3 +100,23 @@
 .open-post__heart-count span{
     margin-left: 3px;
 }
+
+@keyframes heartbeat{
+    0%{
+        color: white;
+        transform: none;
+    }
+    50%{
+        color: tomato;
+        transform: scale(1.3);
+    }
+    100%{
+        color: white;
+        transform: none;
+    }
+}
+.open-post__heart-count:hover i{
+    /* 브라우저에게 어떤 것이 변할지 알려줌 - 여기서는 transform이 변할 것을 알려줌 */
+    will-change: transform;
+    animation: heartbeat 1s linear infinite;
+}
