--- a/Chrome/css/style.css
+++ b/Chrome/css/style.css
@@ -1,14 +1,24 @@
 .hidden{ display: none;}
 *{margin: 0 auto; position: relative;}
+
+.all{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 #clock{
     font-size: 80px;
-    /* position: absolute; top: 50%; left: 50%; */
+    opacity: 80%;
+    position: absolute;
+    bottom: -200px;
 }
 input{
     width: 300px; height: 40px;
     border: 1px solid lightgray;
     border-radius: 10px;
-    /* position: absolute; top: 60%; left: 50%; */
+    
 }
 button{
     width: 20px; height: 20px;
@@ -19,7 +29,40 @@ button{
     font-size: 15px;
     margin: 0px 10px;
 }
+#todo-form{
+    position: relative;
+}
+h3{
+    text-align: center;
+    margin: 10px;
+    position: absolute;
+    top: 300px;
+}
 #quote{
-    /* position: absolute; top: 80%; left: 50%; */
-    font-size: 35px;
+    font-size: 20px;
+    position: absolute;
+    bottom: -660px;
+}
+li{
+    list-style: none;
+    font-size: 20px;
+    text-align:left;
+    color: black;
+}
+li:before{
+    content:'🤍';
+    display: inline;
+    vertical-align: left;
+    padding: 5px;
+}
+img {
+    position:absolute;
+    width:100vw;
+    height:100vh;
+    left: 0px;
+    top: 0px;
+    right:0px;
+    bottom:0px;
+    z-index: -1;
+    opacity:80%;
 }
