--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -13,7 +13,7 @@
 /* screens */
 @import "./screens/login.css";
 @import "./screens/friends.css";
-@import "./screens/find.css";
+@import "./screens/skills.css";
 @import "./screens/more.css";
 @import "./screens/setting.css";
 @import "./screens/chatting.css";
