--- a/넷마블/style.css
+++ b/넷마블/style.css
@@ -6,10 +6,11 @@
     --color-gray: #bbb8b8;
 
     /* fontsize */
-    --font-large: 50px;
-    --font-medium: 24px;
-    --font-small: 18px;
-    --font-micro: 14px;
+    --font-big-large: 58px;
+    --font-large: 42px;
+    --font-medium: 32px;
+    --font-small: 24px;
+    --font-micro: 18px;
 
 }
 /* 전체 */
@@ -20,10 +21,12 @@
 h1{
     font-size: var(--font-large);
 }
-h2{}
-h3{}
-h4{}
-p{}
+h2{
+    font-size: var(--font-medium);
+    margin-top: 40px;
+    color: var(--color-black);
+}
+
 li{list-style: none;}
 a{text-decoration: none;}
 /* navbar */
@@ -37,47 +40,215 @@ a{text-decoration: none;}
     background-color: pink;
 }
 .navbar_logo{
-    
-}
-.navbar_menu{
-    color: var(--color-white);
-    display: flex;
-    font-size: var(--font-medium);
-
-}
-.navbar_menu_detail li{
-    display: none;
-}
-/* slide*/
-/* info */
-#info{
-    background-color: yellow;
-}
-/* news */
-#news{
-    background-color: green;
-}
-/* footer */
-#footer{
-    background-color: var(--color-black);
-    padding: 60px 30px;
-    position: relative;
-}
-.navbar_logo{
     font-size: var(--font-large);
+    margin: 0 400px 0 50px;
+}
+.navbar_logo i{
     color: var(--color-white);
+}
+.navbar_logo i:hover{
+    color: #f8e21e;
 }
 .navbar_logo a{
     color: var(--color-white);
 }
+
+.navbar_menu{
+    display: flex;
+    font-size: var(--font-medium);
+}
+.navbar_menu_list{
+    margin: 0 100px;
+}
+.navbar_menu_list > a{
+    font-size: var(--font-medium);
+    color: var(--color-white);
+}
+.navbar_menu_list:hover{
+    color: var(--color-black);
+}
+.navbar_menu_detail{
+    display: none;
+}
+
+/* slide*/
+#slide .home{
+    width: 100%;
+    height: 1500px;
+    background-color: rgb(180, 198, 205);
+}
+/* info */
+#info{
+    background-color: var(--color-white)
+    width: 100%;
+    height: 2000px;
+    position: relative;
+}
+#photo{
+    display: flex;
+}
+#photo img{
+    width: 550px;
+    height: 650px;
+    margin: 0px 10px;
+}
+
+.yellow_box{
+    border: 1px solid yellow;
+    background-color: yellow;
+    margin: 0px 400px 0px 30px;
+    width: 1400px;
+    height: 400px;
+    padding-top: 50px;
+    padding-left: 100px;
+    position: absolute;
+    left: 80px;
+    bottom: 400px;
+}
+.yellow_box span{
+    font-weight: bold;
+}
+.yellow_box p{
+    font-size: var(--font-small);
+    margin-top: 50px;
+}
+.image img{
+    width: 900px;
+    height: 400px;
+    position: absolute;
+    right: 100px;
+    bottom: 250px;
+}
+/* news */
+#news{
+    background-color: rgb(247, 241, 241);
+    width: 100%;
+    height: 1200px;
+    position: relative;
+}
+.theme_two{
+    font-size: var(--font-big-large);
+    color: var(--color-black);
+    float: left;
+    position: absolute;
+    top: 100px;
+    left: 50px;
+}
+.yellow_line{
+    float: left;
+    position: absolute;
+    top: 170px;
+    left: 50px;
+    width: 100px;
+    height: 10px;
+    border: 1px solid #f8e21e;
+    background-color: #f8e21e;
+}
+.news_menu{
+    display: flex;
+    position: absolute;
+    top: 180px; right: 100px;
+}
+.news_menu li{
+    border: 1px solid transparent;
+    width: 150px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 30px;
+    margin-right: 50px;
+    font-size: var(--font-small);
+    color: lightgray;
+}
+.news_menu li:hover{
+    color: var(--color-black);
+    border: 1px solid lightgray;
+    background-color: lightgray;
+    cursor: pointer;
+}
+.news_program{
+    display: flex;
+    justify-content: space-between;
+    
+}
+.program_box{
+    border: 1px solid white;
+    border-radius: 10px;
+    background-color: var(--color-white);
+    width: 500px;
+    height: 650px;
+    text-align: center;
+    margin-top: 300px;
+    position: relative;
+}
+.program_box h2{
+    padding: 20px;
+}
+.program_box img{
+    width: 500px;
+    height: 300px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.program_box p{
+    font-size: var(--font-small);
+    color: var(--color-black);
+    margin-top: 20px;
+    padding: 20px;
+}
+.program_box .date{
+    position: absolute;
+    left: 50px;
+    bottom: 50px;
+    font-size: var(--font-small);
+    color: var(--color-gray);
+}
+
+/* footer */
+#footer{
+    background-color: #1b1b1b;
+    padding: 60px 30px;
+    width: 100%;
+    height: 400px;
+    position: relative;
+}
+.address, .copyright{
+    font-size: var(--font-small);
+    color: var(--color-gray);
+}
+.address{
+    position: absolute;
+    top: 150px;
+    left: 80px;
+    font-size: var(--font-micro);
+}
+.copyright{
+    position: absolute;
+    top: 180px;
+    left: 80px;
+    font-size: var(--font-micro);
+}
 .site{
     display: flex;
     justify-content: space-between;
+    font-size: var(--font-small);
+    position: absolute;
+    left: 40px;
+    bottom: 70px; 
+}
+.site_menu a{
+    color: var(--color-gray);
+    margin-right: 20px;
 }
 .family_site{
     position: absolute;
-    right: 200px; bottom: 200px;
-    color: var(--color-gray);    
+    right: 120px; top: 80px;
+    border: 1px solid var(--color-black);
+    padding: 15px 150px 15px 20px;  
+    background-color: var(--color-black); 
+}
+.family_site a{
+    color: var(--color-gray);
 }
 .link{
     position: absolute;
@@ -86,4 +257,5 @@ a{text-decoration: none;}
 }
 .link i{
     color: var(--color-white);
+    padding: 20px;
 }
