--- a/넷마블/style.css
+++ b/넷마블/style.css
@@ -1,298 +1,21 @@
-:root{
-    /* color */
-    --color-yellow: #f8e21e;
-    --color-white: #ffffff;
-    --color-black: #1d1b1b;
-    --color-gray: #bbb8b8;
-
-    /* fontsize */
-    --font-big-large: 58px;
-    --font-large: 42px;
-    --font-medium: 32px;
-    --font-small: 24px;
-    --font-micro: 18px;
+.navbar{
 
 }
-/* 전체 */
-*{
-    box-sizing: border-box;
-    margin: 0 auto;
-}
-h1{
-    font-size: var(--font-large);
-}
-h2{
-    font-size: var(--font-medium);
-    margin-top: 40px;
-    color: var(--color-black);
-}
-li{list-style: none;}
-a{text-decoration: none;}
-/* navbar */
-#navbar{
-    position: fixed;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 18px;
-    background-color: pink;
-    z-index: 0;
-}
-.navbar_logo{
-    font-size: var(--font-large);
-    margin: 0 400px 0 50px;
-}
-.navbar_logo i{
-    color: var(--color-white);
-}
-.navbar_logo i:hover{
-    color: var(--color-yellow);
-}
-.navbar_logo a{
-    color: var(--color-white);
+
+.logo{
+    width: 1280px;
+    float: left;
 }
 
-.navbar_menu{
-    display: flex;
-    font-size: var(--font-medium);
-}
-.navbar_menu_list{
-    margin: 0 100px;
-}
-.navbar_menu_list > a{
-    font-size: var(--font-medium);
-    color: var(--color-white);
-}
-.navbar_menu_list:hover{
-    color: var(--color-black);
-}
-.navbar_menu_detail{
-    display: none;
-}
-
-/* slide*/
-#slide .home{
-    width: 100%;
-    height: 1500px;
-    background-color: rgb(180, 198, 205);
-}
-/* info */
-#info{
-    background-color: var(--color-white);
-    width: 100%;
-    height: 2800px;
-    position: relative;
-}
-.yellow_line_1{
-    position: absolute;
-    top: 240px;
-    left: 50px;
-    border: 1px solid var(--color-yellow);
-    background-color: var(--color-yellow);
-    width: 100px;
-    height: 10px;
-}
-.info_detail{
+.gnb{
     float: right;
-    font-size: var(--font-small);
-    position: absolute;
-    top: 400px;
-    right: 80px;
+    width: 30%;
 }
-#photo{
-    display: flex;
-    position: absolute;
-    top: 700px;
-    left: 60px;
-}
-#photo > i{
-    font-size: var(--font-micro);
-    position: absolute;
-    left: 160px;
-    top: 700px;
-}
-#photo p{
-    font-size: var(--font-small);
-}
-#photo img{
-    width: 550px;
-    height: 650px;
+.gnb ul li{
+    list-style: none;
+    float: left;
     margin: 0px 30px;
 }
-
-.yellow_box{
-    border: 1px solid var(--color-yellow);
-    background-color: var(--color-yellow);
-    margin: 0px 400px 0px 30px;
-    width: 1400px;
-    height: 400px;
-    padding-top: 50px;
-    padding-left: 100px;
-    position: absolute;
-    left: 80px;
-    bottom: 400px;
-}
-.yellow_box span{
-    font-weight: bold;
-}
-.yellow_box p{
-    font-size: var(--font-small);
-    margin-top: 50px;
-}
-.image img{
-    width: 900px;
-    height: 400px;
-    position: absolute;
-    right: 100px;
-    bottom: 250px;
-}
-/* news */
-#news{
-    background-color: rgb(244, 244, 242);
-    width: 100%;
-    height: 1200px;
-    position: relative;
-}
-.theme{
-    font-size: var(--font-big-large);
-    color: var(--color-black);
-    float: left;
-    position: absolute;
-    top: 100px;
-    left: 50px;
-}
-.yellow_line_2{
-    float: left;
-    position: absolute;
-    top: 170px;
-    left: 50px;
-    width: 100px;
-    height: 10px;
-    border: 1px solid var(--color-yellow);
-    background-color:  var(--color-yellow);
-}
-.news_menu{
-    display: flex;
-    position: absolute;
-    top: 180px; right: 100px;
-}
-.news_menu li{
-    border: 1px solid transparent;
-    width: 150px;
-    height: 50px;
-    text-align: center;
-    line-height: 50px;
-    border-radius: 30px;
-    margin-right: 50px;
-    font-size: var(--font-small);
-    color: lightgray;
-}
-.news_menu li:hover{
-    color: var(--color-black);
-    border: 1px solid lightgray;
-    background-color: lightgray;
-    cursor: pointer;
-}
-.news_program{
-    display: flex;
-    justify-content: space-between;
-    
-}
-.program_box{
-    border: 1px solid var(--color-white);
-    border-radius: 10px;
-    background-color: var(--color-white);
-    width: 500px;
-    height: 650px;
-    text-align: center;
-    margin-top: 300px;
-    position: relative;
-}
-.program_box h2{
-    padding: 20px;
-}
-.program_smallBox{
-    width: 420px;
-    height: 20px;
-    border: 1px solid rgb(62, 25, 25);
-    background-color: rgb(62, 25, 25);
-    position: absolute;
-    left: 40px;
-    bottom: 170px;
-}
-.program_box img{
-    width: 500px;
-    height: 300px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-.program_box p{
-    font-size: var(--font-small);
-    color: var(--color-black);
-    margin-top: 20px;
-    padding: 20px;
-}
-.program_box .date{
-    position: absolute;
-    left: 50px;
-    bottom: 50px;
-    font-size: var(--font-small);
-    color: var(--color-gray);
-}
-
-/* footer */
-#footer{
-    background-color: #1b1b1b;
-    padding: 60px 30px;
-    width: 100%;
-    height: 400px;
-    position: relative;
-}
-.address, .copyright{
-    font-size: var(--font-small);
-    color: var(--color-gray);
-}
-.address{
-    position: absolute;
-    top: 150px;
-    left: 80px;
-    font-size: var(--font-micro);
-}
-.copyright{
-    position: absolute;
-    top: 180px;
-    left: 80px;
-    font-size: var(--font-micro);
-}
-.site{
-    display: flex;
-    justify-content: space-between;
-    font-size: var(--font-small);
-    position: absolute;
-    left: 40px;
-    bottom: 70px; 
-}
-.site_menu a{
-    color: var(--color-gray);
-    margin-right: 20px;
-}
-.family_site{
-    position: absolute;
-    right: 120px; top: 80px;
-    border: 1px solid var(--color-black);
-    padding: 15px 150px 15px 20px;  
-    background-color: var(--color-black); 
-}
-.family_site a{
-    color: var(--color-gray);
-}
-.link{
-    position: absolute;
-    bottom: 80px; right: 50px;
-    font-size: var(--font-medium);
-}
-.link i{
-    color: var(--color-white);
-    padding: 20px;
+.slide{
+    height: 100vh;
 }
