--- a/넷마블/style.css
+++ b/넷마블/style.css
@@ -1,35 +1,53 @@
 body{font-family: 'Noto Sans KR', sans-serif;};
 /* navbar */
+.navbar{
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+}
+.nav{
+    clear: both;
+    width: 1280px;
+}
+.logo{
+    float: left;
+}
+.navbar .nav .logo a{
+    text-decoration: none;
+}
 .gnb{
     float: right;
 }
 .gnb ul li{
     list-style: none;
     float: left;
-    color: #1e1e1e;
     display: inline-block;
+    color: #1e1e1e;
     font-size: 20px;
     font-weight: 700;
     box-sizing: border-box;
 }
-/* slide */
-.slide{
-    height: 100vh;
+.gnb ul li a{
+    text-decoration: none;
 }
+/* slide */
+
 /* home */
-.home{
+.title{
+    float: left;
     clear: both;
 }
 .title_01{
     font-size: 44px;
     font-weight: 700;
-    float: left;
-    clear: both;
 }
 .title_02{
-    float: right;
+    font-size: 18px;
+    padding-left: 624px;
 }
-.link{
-    float: left;
+.link_list{
+   clear: both;
+   float: left;
 }
+
 /* footer */
