--- a/넷마블/style.css
+++ b/넷마블/style.css
@@ -83,7 +83,7 @@ h1{
 }
 .link li{
     float: left;
-    width:calc( 100% / 3 - 40px );
+    width:calc( (100% - 40px) / 3 );
     margin-right: 20px;
 }
 .link li:last-child{margin-right: 0;}
