--- a/넷마블/netmarble.css
+++ b/넷마블/netmarble.css
@@ -66,11 +66,18 @@ a:link, a:visited{text-decoration: none; color: #333;}
 /* 재단소식 */
 .title2{
     margin-top: 160px;
+    background-color: #9e9a9a;
+}
+.title h2:after{
+    width: 50px; height: 10px;
+    border: 1px solid #ffd44a;
+    background-color: #ffd44a;
 }
 .category{float: right;}
 .category li{
     float: left; padding: 0px 24px; font-size: 14px; font-weight: 500;
-    border: 1px solid gray; border-radius: 15px;
+    border: 1px solid gray; border-radius: 19px; background-color: #f0f1f2;
+    color: #1e1e1e; line-height: 38px; margin-left: 8px;
 }
 
 /* footer */
