--- a/넷마블/netmarble.css
+++ b/넷마블/netmarble.css
@@ -21,8 +21,17 @@ a:link, a:visited{text-decoration: none; color: #333;}
 .slide{height: 100vh; background-color:  green;}
 
 /* home */
-.title{padding: 160px 0px; background-color: yellow;}
-.title_1{float: left; font-size: 44px; font-weight: 700;}
+.title{padding: 160px 0px;}
+.title_1{float: left; font-size: 44px; font-weight: 700; position: relative;}
+.title_1::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 80px;
+    height: 5px;
+    background-color: #ffd44a;
+}
 .title_2{float: right; font-size: 18px;}
 
 
@@ -33,7 +42,6 @@ a:link, a:visited{text-decoration: none; color: #333;}
 }
 .link ul li{
     margin-right: 20px;
-    background-color: pink;
 }
 .link li img{
     width: 100%;
@@ -55,6 +63,16 @@ a:link, a:visited{text-decoration: none; color: #333;}
     height: 338px;
     margin-top: 30px;
 }
+.box h2{
+    position: absolute;
+    top: 80px;
+    left: 50px;
+}
+.box p{
+    position: absolute;
+    top: 160px;
+    left: 50px;
+}
 .img{
     width: 592px;
     height: 360px;
@@ -68,12 +86,7 @@ a:link, a:visited{text-decoration: none; color: #333;}
     margin-top: 160px;
     background-color: #9e9a9a;
 }
-.title h2:after{
-    width: 50px; height: 10px;
-    border: 1px solid #ffd44a;
-    background-color: #ffd44a;
-}
-.category{float: right;}
+.category{float: right; display: block;}
 .category li{
     float: left; padding: 0px 24px; font-size: 14px; font-weight: 500;
     border: 1px solid gray; border-radius: 19px; background-color: #f0f1f2;
@@ -82,9 +95,11 @@ a:link, a:visited{text-decoration: none; color: #333;}
 
 /* footer */
 .footer_inner{
+    min-width: 1280px;
     float: left;
     background-color: black;
     width: 100%;
+    padding: 64px 0px;
 }
 .footer_inner .copyright{
     margin: 26px 0px 0px;
@@ -98,13 +113,38 @@ a:link, a:visited{text-decoration: none; color: #333;}
     color: white;
     margin-right: 15px;
 }
-.footer_inner .family{
-    float: right;
-    border: 1px solid gray;
+.footer_inner .family_site .family_list{
+    display: none;
+    position: absolute;
+    right: 0;
+    bottom: 32px;
+    width: 100%;
+    padding: 0 8px;
+    box-sizing: border-box;
+    background: #080808;
+    text-align: left;
+    color: wheat;
+}
+.footer_inner .family_site .family{
+    display: block;
+    position: relative;
+    height: 32px;
+    background: #080808;
+    padding: 0 24px;
+    font-size: 11px;
+    color: hsla(0,0%,88.2%,.5);
+    line-height: 32px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    cursor: pointer;
+    text-align: left;
+    
 }
 .footer_inner .mobile{
     float: right;
 }
 .footer_inner .mobile li{
     float: left;
+    padding: 10px;
 }
