--- a/넷마블/netmarble.css
+++ b/넷마블/netmarble.css
@@ -94,6 +94,9 @@ a:link, a:visited{text-decoration: none; color: #333;}
 }
 
 /* footer */
+.foot{
+    background-color: #333;
+}
 .footer_inner{
     min-width: 1280px;
     float: left;
@@ -126,6 +129,7 @@ a:link, a:visited{text-decoration: none; color: #333;}
     color: wheat;
 }
 .footer_inner .family_site .family{
+    float: right;
     display: block;
     position: relative;
     height: 32px;
