--- a/가비아/style.css
+++ b/가비아/style.css
@@ -7,8 +7,8 @@ a:link, a:visited{text-decoration: none; color: black;}
 
 .container{
     width: 1180px;
-    margin-left: 116px;
-    margin-right: 116px;
+    margin: 0px 116px;
+    padding: 0px 10px;
 }
 /* navbar */
 .navWrap{
@@ -36,7 +36,6 @@ a:link, a:visited{text-decoration: none; color: black;}
 }
 .toggle{
     color: white;
-    text-align: center;
 }
 .toggle .st1{
     font-size: 54px;
@@ -54,13 +53,15 @@ a:link, a:visited{text-decoration: none; color: black;}
 
 /* main */
 .company{
-    padding-top: 80px;
+    width: 100%;
+    padding: 80px 0px 60px 0px;
 }
 .company ul li{
     float: left;
     margin-right: 30px;
 }
 .company .area_link{
+    font-weight: bold;
     font-size: 20px;
     padding: 0px 0px 30px 0px;
 }
@@ -73,6 +74,7 @@ a:link, a:visited{text-decoration: none; color: black;}
 .company .item_price{
     font-size: 40px;
     float: left;
+    font-weight: bold;
 }
 .company .item_changeUp{
     float: right;
@@ -83,4 +85,60 @@ a:link, a:visited{text-decoration: none; color: black;}
 .company img{
     width: 380px;
     height: 240px;
+}
+.culture{
+    width: 100%;
+    height: 394px;
+    background: url(./image/culture_pc.png) no-repeat;
+}
+.culture_title{
+    font-size: 20px;
+    margin: 0px 0px 28px;
+}
+.culture_content{
+    font-size: 24px;
+}
+.job{
+    background: #EFF1F6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 191px;
+}
+.job a{
+    border: 1px solid #1E1E1E;
+    height: 46px;
+    padding: 10px 20px;
+    margin-top: 16px;
+    border-radius: 2px;
+}
+
+/* footer */
+.footer{
+    padding: 50px;
+}
+.footer_left{
+    float: left;
+}
+.footer_left .addr{
+    padding: 20px 5px 9px;
+}
+.footer_left .copyright{
+    padding: 20px 0px 0px 5px;
+}
+.footer_right{
+    float: right;
+}
+.footer_right input{
+    margin: 0px 8px 0px 0px;
+    padding: 0px 0px 0px 10px;
+}
+.footer_right button{
+    padding: 10px 15px 11px;
+}
+.footer_right .sns{
+    margin-top: 20px;
+}
+.footer_right .sns a{
+    margin-left: 10px;
 }
