--- a/가비아/style.css
+++ b/가비아/style.css
@@ -86,6 +86,8 @@ a:link, a:visited{text-decoration: none; color: black;}
     width: 380px;
     height: 240px;
 }
+
+
 .culture{
     width: 100%;
     height: 394px;
@@ -100,10 +102,11 @@ a:link, a:visited{text-decoration: none; color: black;}
 }
 .job{
     background: #EFF1F6;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 191px;
+}
+.jobbox{
+    margin: 0; padding: 0;
+    display: block;
 }
 .job a{
     border: 1px solid #1E1E1E;
@@ -116,6 +119,7 @@ a:link, a:visited{text-decoration: none; color: black;}
 /* footer */
 .footer{
     padding: 50px;
+    background: #fff;
 }
 .footer_left{
     float: left;
@@ -126,7 +130,7 @@ a:link, a:visited{text-decoration: none; color: black;}
 .footer_left .footer_link :last-child{
     padding: 0px 15px;
 }
-.footer_left .addr p{
+.footer_left .addr{
     padding: 20px 5px 0px;
 }
 .footer_left .copyright{
@@ -135,9 +139,15 @@ a:link, a:visited{text-decoration: none; color: black;}
 .footer_right{
     float: right;
 }
-.footer_right input{
-    margin: 0px 8px 0px 0px;
-    padding: 0px 0px 0px 10px;
+#familysite{
+    width: 145px;
+    height: 44px;
+    font-size: 14px;
+    margin-right: 8px;
+    padding-left: 10px;
+    border: 1px solid #dedede;
+    border-radius: 3px;
+    font-weight: 300;
 }
 .footer_right button{
     padding: 10px 15px 11px;
