--- a/가비아/style.css
+++ b/가비아/style.css
@@ -7,8 +7,10 @@ a:link, a:visited{text-decoration: none; color: black;}
 
 .container{
     width: 1180px;
-    margin: 0px 116px;
-    padding: 0px 10px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 /* navbar */
 .navWrap{
@@ -60,6 +62,9 @@ a:link, a:visited{text-decoration: none; color: black;}
     float: left;
     margin-right: 30px;
 }
+.company_link{
+    margin-bottom: 60px;
+}
 .company .area_link{
     font-weight: bold;
     font-size: 20px;
@@ -92,6 +97,7 @@ a:link, a:visited{text-decoration: none; color: black;}
     width: 100%;
     height: 394px;
     background: url(./image/culture_pc.png) no-repeat;
+    background-size: cover;
 }
 .culture_title{
     font-size: 20px;
@@ -99,14 +105,20 @@ a:link, a:visited{text-decoration: none; color: black;}
 }
 .culture_content{
     font-size: 24px;
+    line-height: 40px;
 }
+
+
 .job{
     background: #EFF1F6;
     height: 191px;
 }
-.jobbox{
-    margin: 0; padding: 0;
-    display: block;
+.job_detail{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 20px;
 }
 .job a{
     border: 1px solid #1E1E1E;
@@ -126,9 +138,11 @@ a:link, a:visited{text-decoration: none; color: black;}
 }
 .footer_left .footer_link :first-child{
     padding: 0px 15px 0px 5px;
+    font-size: 16px;
 }
 .footer_left .footer_link :last-child{
     padding: 0px 15px;
+    font-size: 16px;
 }
 .footer_left .addr{
     padding: 20px 5px 0px;
