--- a/가비아/style.css
+++ b/가비아/style.css
@@ -7,10 +7,10 @@ a:link, a:visited{text-decoration: none; color: black;}
 
 .container{
     width: 1180px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     padding-left: 10px;
     padding-right: 10px;
+    position: relative;
 }
 /* navbar */
 .navWrap{
@@ -36,16 +36,21 @@ a:link, a:visited{text-decoration: none; color: black;}
     height: 800px;
     background-image: url(./image/main_banner_pc.png);
 }
-.toggle{
-    color: white;
+.tWrap{height: 100%;}
+.textWrap{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color:white;
+    background: skyblue;
 }
-.toggle .st1{
+.st1{
     font-size: 54px;
 }
-.toggle .st2{
+.st2{
     font-size: 84px;
 }
-.toggle .st3{
+.st3{
     font-size: 30px;
     line-height: 50px;
 }
@@ -55,7 +60,6 @@ a:link, a:visited{text-decoration: none; color: black;}
 
 /* main */
 .company{
-    width: 100%;
     padding: 80px 0px 60px 0px;
 }
 .company ul li{
@@ -64,6 +68,12 @@ a:link, a:visited{text-decoration: none; color: black;}
 }
 .company_link{
     margin-bottom: 60px;
+}
+.company_intro li{
+    width: calc(( 100% - 60px ) / 3 );
+}
+.company_intro li:last-child{
+    margin-right: 0px;
 }
 .company .area_link{
     font-weight: bold;
@@ -88,8 +98,7 @@ a:link, a:visited{text-decoration: none; color: black;}
     float: right;
 }
 .company img{
-    width: 380px;
-    height: 240px;
+    width: 100%;
 }
 
 
@@ -105,27 +114,32 @@ a:link, a:visited{text-decoration: none; color: black;}
 }
 .culture_content{
     font-size: 24px;
-    line-height: 40px;
+}
+.cWrap{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 
 .job{
     background: #EFF1F6;
-    height: 191px;
+    padding: 30px 0px;
 }
-.job_detail{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.job p{
     text-align: center;
     font-size: 20px;
+    margin-bottom: 20px;
 }
 .job a{
+    width: 300px;
+    margin: 0 auto;
+    display: block;
     border: 1px solid #1E1E1E;
-    height: 46px;
-    padding: 10px 20px;
-    margin-top: 16px;
+    line-height: 40px;
+    
     border-radius: 2px;
+    text-align: center;
 }
 
 /* footer */
@@ -173,3 +187,7 @@ a:link, a:visited{text-decoration: none; color: black;}
 .footer_right .sns a{
     margin-left: 10px;
 }
+
+
+/* common */
+.h100{height: 100% !important;}
