--- a/넷마블/netmarble.css
+++ b/넷마블/netmarble.css
@@ -8,20 +8,29 @@ a:link, a:visited{text-decoration: none; color: #333;}
 .container{
     width: 1280px;
     margin: 0 auto;
+    padding: 160px 32px;
 }
 
 /* navbar */
-.navWrap{width: 100%; position: fixed; background: white; padding: 30px;}
+.navWrap{width: 100%; position: fixed; background: white; padding: 30px; z-index: 0;}
 .logo{float: left;}
 .gnb{float: right;}
 .gnb li{float: left; width: 150px;}
 .gnb li a{color: black; font-size: 30px;}
 
-/* slide */
-.slide{height: 100vh; background-color:  green;}
+/* swiper */
+.swiper{
+    width: 100%;
+    height: 100vh;
+}
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
 /* home */
-.title{padding: 160px 0px;}
 .title_1{float: left; font-size: 44px; font-weight: 700; position: relative;}
 .title_1::after{
     content: "";
@@ -38,10 +47,13 @@ a:link, a:visited{text-decoration: none; color: #333;}
 /* link */
 .link li{
     float: left;
-    width: calc( (100% - 40px) / 3);
-}
-.link ul li{
     margin-right: 20px;
+    width: calc( (100% - 40px) / 3);
+    border-radius: 30px;
+}
+.link li img:first-child{
+    width: 413.32px;
+    height: 279.29px;
 }
 .link li img{
     width: 100%;
@@ -51,6 +63,13 @@ a:link, a:visited{text-decoration: none; color: #333;}
 }
 .link .txt{
     padding: 20px 16px 0px;
+}
+.link .txt2{
+    background-color: white;
+}
+.link .txt2 p{
+    padding-top: 100px;
+    color: gray;
 }
 /* 재단활동 */
 .sec1{
@@ -83,6 +102,7 @@ a:link, a:visited{text-decoration: none; color: #333;}
 /* 재단소식 */
 .title2{
     margin-top: 160px;
+    background-color: lightgray;
 }
 .category{float: right; display: block;}
 .category li{
@@ -93,7 +113,8 @@ a:link, a:visited{text-decoration: none; color: #333;}
 
 /* footer */
 .foot{
-    background-color: #333;
+    margin-top: 100px;
+    background-color: black;
 }
 .footer_inner{
     min-width: 1280px;
