--- a/넷마블/style.css
+++ b/넷마블/style.css
@@ -1,128 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400&display=swap');
-
-/* 전체 reset */
-html,body{height: 100%;}
-*{margin: 0; padding: 0;}
-li{list-style: none;}
-a:link,a:visited{ 
-    text-decoration: none;
-    color:#333;
-}
-body{font-family: 'Noto Sans KR', sans-serif;}
-.clearfix::after{
-    content:""; clear: both; display: block;
-}
-
-
-/* navbar */
-.navWrap{
-    position: fixed;
-    width: 100%;
-    background: transparent;
-}
-.navWrap:hover{
-    background: white;
-}
-.navbar, .link, .home{
-    width: 1280px;
-    margin: 0 auto;
-}
-h1{
-    width: 330px;
-    height: 70px;
-}
-.navbar h1{
-    float: left;
-}
-.navbar h1 a{
-    background: url(./image/bi-dark.9d78fda.png) no-repeat;
-    background-size: 165px auto;
-}
-.navbar h1 a:hover{
-    background: url(./image/bi.6acdb84.png) no-repeat;
-}
-.navbar .gnb{
-    float: right;
-}
-.gnb li{
-    float: left;
-    width: 150px;
-}
-.gnb li a{ 
-    display: block;
-    text-align: center;
-    line-height: 45px;
-    color: white;
-    line-height: 45px;
-}
-.gnb li a:hover{
-    color: black;
-}
-
-/* slide */
-.slide{
-    height: 100vh;
-    background-image: url(./image/banner01.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-/* home */
-.title_01{
-    float: left;
-    font-size: 44px;
-    font-weight: bold;
-}
-.title_02{
-    float: right;
-    font-size: 18px;
-}
-.link{
-    background-color: #333;
-}
-.link li{
-    float: left;
-    width:calc( (100% - 40px) / 3 );
-    margin-right: 20px;
-}
-.link li:last-child{margin-right: 0;}
-.link li span{
-    font-size: 21px;
-    font-weight: 700;
-}
-.link li p{
-    font-size: 15px;
-    margin-top: 7px;
-}
-
-/* yellowBox */
-.yellowBox{
-    position: relative;
-}
-.box1{
-    border: 1px solid #ffd44a;
-    background-color: #ffd44a;
-    width: 1114px;
-    height: 338px;
-}
-.box1 p{
-    font-size: 28px;
-    font-weight: 500;
-}
-.box1 em{
-    display: block;
-    font-size: 15px;
-    font-weight: 500;
-    margin-top: 24px;
-}
-.box2{
-    position: absolute;
-    top: 102px;
-    right: 0px;
-}
-
- /* main notice */
- .main-notice{
-    background-color: #f7f8f9;
- }
+.box {
+  width: 100px;
+}/*# sourceMappingURL=style.css.map */
