--- a/넷마블/netmarble.css
+++ b/넷마블/netmarble.css
@@ -38,6 +38,8 @@ a:link, a:visited{text-decoration: none; color: #333;}
 .slidetxt{
     position: absolute;
     top: 50%;
+    color: white;
+    font-size: 40px;
 }
 /* home */
 .title_1{float: left; font-size: 44px; font-weight: 700; position: relative;}
