--- a/넷마블/netmarble.css
+++ b/넷마블/netmarble.css
@@ -9,8 +9,8 @@ a:link, a:visited{text-decoration: none; color: #333;}
     width: 1280px;
     margin: 0 auto;
 }
-.pd150{
-    padding: 150px 0px;
+.pd160{
+    padding: 160px 0px;
 }
 
 /* navbar */
@@ -20,7 +20,7 @@ a:link, a:visited{text-decoration: none; color: #333;}
 .gnb li{float: left; width: 150px;}
 .gnb li a{color: black; font-size: 30px;}
 
-/* swiper */
+/* slide */
 .slide{
     position: relative;
     z-index: 0;
@@ -44,6 +44,12 @@ a:link, a:visited{text-decoration: none; color: #333;}
     color: white;
     font-size: 40px;
 }
+.swiper-pagination{
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 70%;
+}
 /* home */
 .title_1{float: left; font-size: 44px; font-weight: 700; position: relative;}
 .title_1::after{
@@ -64,6 +70,7 @@ a:link, a:visited{text-decoration: none; color: #333;}
     margin-right: 20px;
     width: calc( (100% - 40px) / 3);
     border-radius: 30px;
+    padding: 32px 0px;
 }
 .link li img:first-child{
     width: 413.32px;
@@ -71,6 +78,7 @@ a:link, a:visited{text-decoration: none; color: #333;}
 }
 .link li img{
     width: 100%;
+    border-radius: 5px;
 }
 .link li:last-child{
     margin-right: 0px;
@@ -114,19 +122,44 @@ a:link, a:visited{text-decoration: none; color: #333;}
     right: 0;
 }
 /* 재단소식 */
+.news{
+    background-color: #f0f1f2;
+}
+.title_1{
+    padding-bottom: 20px;
+}
 .title2{
     margin-top: 160px;
 }
 .category{float: right; display: block;}
 .category li{
     float: left; padding: 0px 24px; font-size: 14px; font-weight: 500;
-    border: 1px solid gray; border-radius: 19px; background-color: #f0f1f2;
-    color: #1e1e1e; line-height: 38px; margin-left: 8px;
+    border: 1px solid #f0f1f2; border-radius: 19px; background-color: #f0f1f2;
+    color: #1e1e1e; line-height: 38px; margin-left: 8px; height: 38px;
+}
+.news_swiper-slide{
+    display: inline;
+    padding-top: 40px;
+}
+.news_swiper-slide img {   
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+  }
+.newstxt{
+    font-size: 20px;
+    background-color: white;
+}
+.newstxt h3{
+    padding-top: 50px;
+}
+.newstxt p{
+    color: gray;
+    padding-top: 50px;
 }
 
 /* footer */
 .foot{
-    margin-top: 100px;
     background-color: black;
 }
 .footer_inner{
