--- a/넷마블/넷마블/netmarble.css
+++ b/넷마블/넷마블/netmarble.css
@@ -14,11 +14,11 @@ a:link, a:visited{text-decoration: none; color: #333;}
 }
 
 /* navbar */
-.navWrap{width: 100%; position: fixed; background: white; padding: 30px; z-index: 1;}
+.navWrap{width: 100%; position: fixed; background: transparent; padding: 30px; z-index: 1;}
 .logo{float: left;}
 .gnb{float: right;}
 .gnb li{float: left; width: 150px;}
-.gnb li a{color: black; font-size: 30px;}
+.gnb li a{color: white; font-size: 30px;}
 
 /* slide */
 .slide{
