--- a/fullpage/css/style.css
+++ b/fullpage/css/style.css
@@ -7,11 +7,49 @@ a:link, a:visited{text-decoration: none; color: black;}
 .container{
     width: 1024px;
     height: 646px;
-    margin: 0 172px;
-    padding: 165px 50px 0px;
+    margin: 0 auto;
+    padding: 100px 50px 0px;
+}
+/* home */
+.navbar{
+    display: flex;
+    justify-content: space-between;
+}
+.navbar .logo img{
+    width: 142px;
+    height: 32px;
+}
+.navbar .sns li{
+    float: left;
+    padding: 0px 25px;
+}
+.navbar .sns img{
+    width: 34px;
+    height: 34px;
 }
 
-
+.download{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+}
+.download h2{
+    color: white;
+}
+.app a img{
+    width: 250px;
+    height: 100px;
+    border-radius: 40px;
+    background-color: white;
+    margin-top: 20px;
+    padding: 15px 20px;
+}
+.qrcode a img{
+    width: 160px;
+    height: 160px;
+    margin-top: 20px;
+}
+/* section */
 .section{
     background-color:rgb(42, 193, 188);
 }
@@ -29,4 +67,34 @@ a:link, a:visited{text-decoration: none; color: black;}
 .backgroundImage{
     width: 634.88px;
     height: 634.88px;
+}
+
+/* footer */
+.footer{
+    background-color: white;
+}
+.footer_left{
+    float: left;
+}
+.footer_left .link img{
+    width: 140px;
+    height: 24px;
+}
+.footer_left .sns li{
+    float: left;
+}
+.footer_left .sns img{
+    width: 34px;
+    height: 34px;
+}
+.copyright p{
+    color: gray;
+    display: block;
+    font-size: 18px;
+}
+.copyright_1{
+    padding-bottom: 25px;
+}
+.footer_right{
+    float: right;
 }
