--- a/fullpage/css/style.css
+++ b/fullpage/css/style.css
@@ -27,7 +27,11 @@ a:link, a:visited{text-decoration: none; color: black;}
     width: 34px;
     height: 34px;
 }
-
+.navbar .app_download img{
+    width: 150px;
+    height: 80px;
+    color: white;
+}
 .download{
     display: flex;
     justify-content: space-between;
@@ -65,8 +69,12 @@ a:link, a:visited{text-decoration: none; color: black;}
     color: white;
 }
 .backgroundImage{
-    width: 634.88px;
-    height: 634.88px;
+    width: 100%;
+    height: 100%;
+}
+.dot img{
+    width: 30px;
+    height: 30px;
 }
 
 /* footer */
