--- a/fullpage/css/style.css
+++ b/fullpage/css/style.css
@@ -80,28 +80,14 @@ a:link, a:visited{text-decoration: none; color: black;}
 .footer{
     background-color: white;
 }
-.footer_left{
-    float: left;
-}
 .footer_left .link img{
-    width: 140px;
-    height: 24px;
+    width: 100px;
+    height: 50px;
 }
-.footer_left .sns li{
-    float: left;
+.footer_left .sns{
+    display: inline-block;
 }
 .footer_left .sns img{
     width: 34px;
     height: 34px;
-}
-.copyright p{
-    color: gray;
-    display: block;
-    font-size: 18px;
-}
-.copyright_1{
-    padding-bottom: 25px;
-}
-.footer_right{
-    float: right;
 }
